// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Generated package.json files dist/packages/plugins/analytics/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "@anatine/zod-mock": "<version>",
    "@ninetailed/experience.js-shared": "<version>",
    "analytics": "<version>",
    "zod": "<version>",
  },
  "description": "Ninetailed SDK plugin for analytics",
  "exports": Object {
    ".": Object {
      "default": "./index.esm.js",
      "import": "./index.esm.js",
      "require": "./index.cjs.js",
      "types": "./index.d.ts",
    },
    "./package.json": "./package.json",
  },
  "keywords": Array [
    "analytics",
    "ninetailed",
    "personalization",
    "a/b testing",
  ],
  "license": "MIT",
  "main": "./index.cjs.js",
  "module": "./index.esm.js",
  "name": "@ninetailed/experience.js-plugin-analytics",
  "repository": Object {
    "directory": "packages/plugins/analytics",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "sideEffects": false,
  "types": "./index.d.ts",
  "version": "7.6.0-beta.1",
}
`;

exports[`Generated package.json files dist/packages/plugins/contentsquare/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "@eslint/eslintrc": "<version>",
    "@eslint/js": "<version>",
    "@ninetailed/experience.js": "<version>",
    "@ninetailed/experience.js-plugin-analytics": "<version>",
    "@ninetailed/experience.js-shared": "<version>",
    "jsonc-eslint-parser": "<version>",
    "tslib": "<version>",
  },
  "description": "Ninetailed SDK plugin for Contentsquare",
  "license": "MIT",
  "main": "./src/index.js",
  "name": "@ninetailed/experience.js-plugin-contentsquare",
  "repository": Object {
    "directory": "packages/plugins/contentsquare",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "type": "commonjs",
  "types": "./src/index.d.ts",
  "version": "7.6.0-beta.1",
}
`;

exports[`Generated package.json files dist/packages/plugins/google-analytics/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "@ninetailed/experience.js": "<version>",
    "@ninetailed/experience.js-plugin-analytics": "<version>",
    "@ninetailed/experience.js-shared": "<version>",
  },
  "description": "Ninetailed SDK plugin for Google Analytics",
  "exports": Object {
    ".": Object {
      "default": "./index.esm.js",
      "import": "./index.esm.js",
      "require": "./index.cjs.js",
      "types": "./index.d.ts",
    },
    "./package.json": "./package.json",
  },
  "keywords": Array [
    "google-analytics",
    "ninetailed",
    "personalization",
    "a/b testing",
  ],
  "license": "MIT",
  "main": "./index.cjs.js",
  "module": "./index.esm.js",
  "name": "@ninetailed/experience.js-plugin-google-analytics",
  "repository": Object {
    "directory": "packages/plugins/google-analytics",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "sideEffects": false,
  "types": "./index.d.ts",
  "version": "7.6.0-beta.1",
}
`;

exports[`Generated package.json files dist/packages/plugins/google-tagmanager/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "@eslint/eslintrc": "<version>",
    "@eslint/js": "<version>",
    "@ninetailed/experience.js": "<version>",
    "@ninetailed/experience.js-plugin-analytics": "<version>",
    "@ninetailed/experience.js-shared": "<version>",
    "jsonc-eslint-parser": "<version>",
    "tslib": "<version>",
  },
  "description": "Ninetailed SDK plugin for Google Tag Manager",
  "keywords": Array [
    "google-tagmanager",
    "ninetailed",
    "personalization",
    "a/b testing",
  ],
  "license": "MIT",
  "main": "./src/index.js",
  "name": "@ninetailed/experience.js-plugin-google-tagmanager",
  "repository": Object {
    "directory": "packages/plugins/google-tagmanager",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "type": "commonjs",
  "types": "./src/index.d.ts",
  "version": "7.6.0-beta.1",
}
`;

exports[`Generated package.json files dist/packages/plugins/insights/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "@ninetailed/experience.js": "<version>",
    "@ninetailed/experience.js-plugin-analytics": "<version>",
    "@ninetailed/experience.js-shared": "<version>",
    "async-retry": "<version>",
  },
  "description": "Ninetailed SDK plugin for Ninetailed Insights",
  "devDependencies": Object {
    "@jest/globals": "<version>",
    "@ninetailed/experience.js-plugin-privacy": "<version>",
  },
  "keywords": Array [
    "insights",
    "ninetailed",
    "personalization",
    "a/b testing",
  ],
  "license": "MIT",
  "main": "./index.cjs.js",
  "name": "@ninetailed/experience.js-plugin-insights",
  "repository": Object {
    "directory": "packages/plugins/insights",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "type": "commonjs",
  "types": "./index.d.ts",
  "version": "7.6.0-beta.1",
}
`;

exports[`Generated package.json files dist/packages/plugins/preview/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "@ninetailed/experience.js": "<version>",
    "@ninetailed/experience.js-plugin-analytics": "<version>",
    "@ninetailed/experience.js-preview-bridge": "<version>",
    "@ninetailed/experience.js-shared": "<version>",
  },
  "description": "Ninetailed SDK plugin for preview",
  "exports": Object {
    ".": Object {
      "default": "./index.esm.js",
      "import": "./index.esm.js",
      "require": "./index.cjs.js",
      "types": "./index.d.ts",
    },
    "./package.json": "./package.json",
  },
  "keywords": Array [
    "preview",
    "ninetailed",
    "personalization",
    "a/b testing",
  ],
  "license": "MIT",
  "main": "./index.cjs.js",
  "module": "./index.esm.js",
  "name": "@ninetailed/experience.js-plugin-preview",
  "repository": Object {
    "directory": "packages/plugins/preview",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "sideEffects": false,
  "types": "./index.d.ts",
  "version": "7.6.0-beta.1",
}
`;

exports[`Generated package.json files dist/packages/plugins/preview-bridge/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "@ninetailed/experience.js-shared": "<version>",
    "zoid": "<version>",
  },
  "description": "Ninetailed SDK plugin for Experience.js preview bridge",
  "exports": Object {
    ".": Object {
      "default": "./index.esm.js",
      "import": "./index.esm.js",
      "require": "./index.cjs.js",
      "types": "./index.d.ts",
    },
    "./package.json": "./package.json",
  },
  "keywords": Array [
    "preview-bridge",
    "ninetailed",
    "personalization",
    "a/b testing",
  ],
  "license": "MIT",
  "main": "./index.cjs.js",
  "module": "./index.esm.js",
  "name": "@ninetailed/experience.js-preview-bridge",
  "repository": Object {
    "directory": "packages/plugins/preview-bridge",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "sideEffects": false,
  "types": "./index.d.ts",
  "version": "7.6.0-beta.1",
}
`;

exports[`Generated package.json files dist/packages/plugins/privacy/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "@eslint/eslintrc": "<version>",
    "@eslint/js": "<version>",
    "@ninetailed/experience.js": "<version>",
    "@ninetailed/experience.js-plugin-analytics": "<version>",
    "@ninetailed/experience.js-shared": "<version>",
    "analytics": "<version>",
    "jsonc-eslint-parser": "<version>",
    "tslib": "<version>",
    "wildcard-match": "<version>",
  },
  "description": "Ninetailed SDK plugin for privacy",
  "devDependencies": Object {},
  "keywords": Array [
    "privacy",
    "ninetailed",
    "personalization",
    "a/b testing",
  ],
  "license": "MIT",
  "main": "./src/index.js",
  "name": "@ninetailed/experience.js-plugin-privacy",
  "repository": Object {
    "directory": "packages/plugins/privacy",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "type": "commonjs",
  "types": "./src/index.d.ts",
  "version": "7.6.0-beta.1",
}
`;

exports[`Generated package.json files dist/packages/plugins/segment/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "@eslint/eslintrc": "<version>",
    "@eslint/js": "<version>",
    "@ninetailed/experience.js": "<version>",
    "@ninetailed/experience.js-plugin-analytics": "<version>",
    "@ninetailed/experience.js-shared": "<version>",
    "jsonc-eslint-parser": "<version>",
    "tslib": "<version>",
  },
  "description": "Ninetailed SDK plugin for Segment",
  "devDependencies": Object {
    "@segment/analytics-next": "<version>",
  },
  "keywords": Array [
    "segment",
    "ninetailed",
    "personalization",
    "a/b testing",
  ],
  "license": "MIT",
  "main": "./src/index.js",
  "name": "@ninetailed/experience.js-plugin-segment",
  "repository": Object {
    "directory": "packages/plugins/segment",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "type": "commonjs",
  "types": "./src/index.d.ts",
  "version": "7.6.0-beta.1",
}
`;

exports[`Generated package.json files dist/packages/plugins/ssr/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "@ninetailed/experience.js": "<version>",
    "@ninetailed/experience.js-plugin-analytics": "<version>",
    "@ninetailed/experience.js-shared": "<version>",
    "js-cookie": "<version>",
    "uuid": "<version>",
  },
  "description": "Ninetailed SDK plugin for SSR",
  "exports": Object {
    ".": Object {
      "default": "./index.esm.js",
      "import": "./index.esm.js",
      "require": "./index.cjs.js",
      "types": "./index.d.ts",
    },
    "./package.json": "./package.json",
  },
  "keywords": Array [
    "ssr",
    "ninetailed",
    "personalization",
    "a/b testing",
  ],
  "license": "MIT",
  "main": "./index.cjs.js",
  "module": "./index.esm.js",
  "name": "@ninetailed/experience.js-plugin-ssr",
  "repository": Object {
    "directory": "packages/plugins/ssr",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "sideEffects": false,
  "types": "./index.d.ts",
  "version": "7.6.0-beta.1",
}
`;

exports[`Generated package.json files dist/packages/sdks/javascript/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "@ninetailed/experience.js-plugin-analytics": "<version>",
    "@ninetailed/experience.js-shared": "<version>",
    "analytics": "<version>",
    "uuid": "<version>",
  },
  "description": "Ninetailed SDK for javascript",
  "devDependencies": Object {
    "@jest/globals": "<version>",
  },
  "license": "MIT",
  "main": "./index.cjs.js",
  "module": "./index.esm.js",
  "name": "@ninetailed/experience.js",
  "repository": Object {
    "directory": "packages/sdks/javascript",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "types": "./index.d.ts",
  "version": "7.6.0-beta.1",
}
`;

exports[`Generated package.json files dist/packages/sdks/nextjs/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "@ninetailed/experience.js": "<version>",
    "@ninetailed/experience.js-plugin-ssr": "<version>",
    "@ninetailed/experience.js-react": "<version>",
    "@ninetailed/experience.js-shared": "<version>",
  },
  "description": "Ninetailed SDK for Next.js",
  "exports": Object {
    ".": Object {
      "default": "./index.esm.js",
      "import": "./index.esm.js",
      "require": "./index.cjs.js",
      "types": "./index.d.ts",
    },
    "./package.json": "./package.json",
  },
  "keywords": Array [
    "nextjs",
    "ninetailed",
    "personalization",
    "a/b testing",
  ],
  "license": "MIT",
  "main": "./index.cjs.js",
  "module": "./index.esm.js",
  "name": "@ninetailed/experience.js-next",
  "peerDependencies": Object {
    "next": "<version>",
    "react": "<version>",
  },
  "repository": Object {
    "directory": "packages/sdks/nextjs",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "sideEffects": false,
  "types": "./index.d.ts",
  "version": "7.6.0-beta.1",
}
`;

exports[`Generated package.json files dist/packages/sdks/nextjs-esr/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "next": "<version>",
  },
  "description": "Ninetailed SDK for Next.js ESR",
  "exports": Object {
    ".": Object {
      "default": "./index.esm.js",
      "import": "./index.esm.js",
      "require": "./index.cjs.js",
      "types": "./index.d.ts",
    },
    "./package.json": "./package.json",
  },
  "keywords": Array [
    "nextjs-esr",
    "ninetailed",
    "personalization",
    "a/b testing",
  ],
  "license": "MIT",
  "main": "./index.cjs.js",
  "module": "./index.esm.js",
  "name": "@ninetailed/experience.js-next-esr",
  "peerDependencies": Object {
    "@ninetailed/experience.js-shared": "<version>",
    "uuid": "<version>",
  },
  "repository": Object {
    "directory": "packages/sdks/nextjs-esr",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "sideEffects": false,
  "types": "./index.d.ts",
  "version": "7.6.0-beta.1",
}
`;

exports[`Generated package.json files dist/packages/sdks/nodejs/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "@eslint/eslintrc": "<version>",
    "@eslint/js": "<version>",
    "@ninetailed/experience.js-shared": "<version>",
    "jsonc-eslint-parser": "<version>",
    "uuid": "<version>",
  },
  "description": "Ninetailed SDK for Node.js",
  "engines": Object {
    "node": ">=24",
  },
  "keywords": Array [
    "nodejs",
    "ninetailed",
    "personalization",
    "a/b testing",
  ],
  "license": "MIT",
  "main": "./src/index.js",
  "name": "@ninetailed/experience.js-node",
  "repository": Object {
    "directory": "packages/sdks/nodejs",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "type": "commonjs",
  "types": "./src/index.d.ts",
  "version": "7.6.0-beta.1",
}
`;

exports[`Generated package.json files dist/packages/sdks/react/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "@ninetailed/experience.js": "<version>",
    "@ninetailed/experience.js-plugin-analytics": "<version>",
    "@ninetailed/experience.js-shared": "<version>",
    "react-is": "<version>",
  },
  "description": "Ninetailed SDK for React",
  "exports": Object {
    ".": Object {
      "default": "./index.esm.js",
      "import": "./index.esm.js",
      "require": "./index.cjs.js",
      "types": "./index.d.ts",
    },
    "./package.json": "./package.json",
  },
  "keywords": Array [
    "react",
    "ninetailed",
    "personalization",
    "a/b testing",
  ],
  "license": "MIT",
  "main": "./index.cjs.js",
  "module": "./index.esm.js",
  "name": "@ninetailed/experience.js-react",
  "peerDependencies": Object {
    "react": "<version>",
  },
  "repository": Object {
    "directory": "packages/sdks/react",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "sideEffects": false,
  "types": "./index.d.ts",
  "version": "7.6.0-beta.1",
}
`;

exports[`Generated package.json files dist/packages/sdks/shared/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "@anatine/zod-mock": "<version>",
    "async-retry": "<version>",
    "diary": "<version>",
    "i18n-iso-countries": "<version>",
    "jest-fetch-mock": "<version>",
    "murmurhash-js": "<version>",
    "ts-toolbelt": "<version>",
    "zod": "<version>",
  },
  "description": "Shared code for Experience.js",
  "exports": Object {
    ".": Object {
      "default": "./index.esm.js",
      "import": "./index.esm.js",
      "require": "./index.cjs.js",
      "types": "./index.d.ts",
    },
    "./package.json": "./package.json",
  },
  "license": "MIT",
  "main": "./index.cjs.js",
  "module": "./index.esm.js",
  "name": "@ninetailed/experience.js-shared",
  "repository": Object {
    "directory": "packages/sdks/shared",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "sideEffects": false,
  "types": "./index.d.ts",
  "version": "7.6.0-beta.1",
}
`;

exports[`Generated package.json files dist/packages/utils/contentful/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "@contentful/rich-text-types": "<version>",
    "@ninetailed/experience.js-shared": "<version>",
    "@ninetailed/experience.js-utils": "<version>",
    "contentful": "<version>",
    "zod": "<version>",
  },
  "description": "Contentful utilities for Experience.js",
  "exports": Object {
    ".": Object {
      "default": "./index.esm.js",
      "import": "./index.esm.js",
      "require": "./index.cjs.js",
      "types": "./index.d.ts",
    },
    "./package.json": "./package.json",
  },
  "keywords": Array [
    "contentful",
    "ninetailed",
    "personalization",
    "a/b testing",
  ],
  "license": "MIT",
  "main": "./index.cjs.js",
  "module": "./index.esm.js",
  "name": "@ninetailed/experience.js-utils-contentful",
  "repository": Object {
    "directory": "packages/utils/contentful",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "resolutions": Object {
    "@contentful/rich-text-types": "17.2.5",
  },
  "sideEffects": false,
  "types": "./index.d.ts",
  "version": "7.6.0-beta.1",
}
`;

exports[`Generated package.json files dist/packages/utils/javascript/package.json should match the snapshot 1`] = `
Object {
  "dependencies": Object {
    "@ninetailed/experience.js": "<version>",
    "@ninetailed/experience.js-shared": "<version>",
    "zod": "<version>",
  },
  "description": "Ninetailed Experience.js Utils",
  "exports": Object {
    ".": Object {
      "default": "./index.esm.js",
      "import": "./index.esm.js",
      "require": "./index.cjs.js",
      "types": "./index.d.ts",
    },
    "./package.json": "./package.json",
  },
  "license": "MIT",
  "main": "./index.cjs.js",
  "module": "./index.esm.js",
  "name": "@ninetailed/experience.js-utils",
  "repository": Object {
    "directory": "packages/utils/javascript",
    "type": "git",
    "url": "https://github.com/ninetailed-inc/experience.js.git",
  },
  "sideEffects": false,
  "types": "./index.d.ts",
  "version": "7.6.0-beta.1",
}
`;
